--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -1,25 +1,9 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-}
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
-buildscript {
-    ext.kotlin_version = '1.2.41'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-repositories {
-    mavenCentral()
-}
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
@@ -29,4 +13,25 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+    test.java.srcDirs += 'src/test/kotlin'
+}
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+}
+
+task buildJar(type: Jar) {
+    baseName = rootProject.name + '-kotlin'
+
+    File outDir = file("${rootDir}/out/")
+    if (!outDir.exists()) {
+        outDir.mkdirs()
+    }
+    from outDir
+    into outDir
 }
