--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+ext {
+    KeXVersion = '0.1'
+    bintrayUrl = 'https://github.com/Keyrillanskiy/keX'
+}
+
+
 buildscript {
     ext.kotlin_version = '1.2.50'
     repositories {
@@ -8,6 +14,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.2'
     }
 }
 
