--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
@@ -25,13 +27,86 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
-task buildJar(type: Jar) {
-    baseName = rootProject.name + '-kotlin'
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier 'sources'
+}
 
-    File outDir = file("${rootDir}/out/")
-    if (!outDir.exists()) {
-        outDir.mkdirs()
+group = "com.github.keyrillanskiy"
+version = KeXVersion
+
+def pomConfig = {
+    licenses {
+        license {
+            name "MIT License"
+            url "https://opensource.org/licenses/MIT"
+        }
     }
-    from outDir
-    into outDir
+    developers {
+        developer {
+            id "keyrillanskiy"
+            name "Kirill Chirkin"
+        }
+    }
+    scm {
+        url bintrayUrl
+    }
+}
+
+publishing {
+    publications {
+        KotlinPublication(MavenPublication) {
+            from components.java
+            groupId 'com.github.keyrillanskiy'
+            artifactId 'kotlin'
+            version KeXVersion
+
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('name', 'KeX-kotlin')
+                root.appendNode('description', 'KeX - keyrillanskiy\'s extensions for kotlin and android. The goal of KeX is to store the most useful extensions in one library.')
+                root.appendNode('url', bintrayUrl)
+                root.children().last() + pomConfig
+
+                def dependenciesNode = asNode().appendNode('dependencies')
+                configurations.implementation.allDependencies.each {
+                    if (it.name != 'unspecified') {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                    }
+                }
+            }
+        }
+    }
+}
+
+bintray {
+    Properties properties = new Properties()
+    def propertiesFile = file("${rootDir}/local.properties")
+    if (propertiesFile.exists()) {
+        properties.load(new FileInputStream(propertiesFile))
+    }
+
+    user = properties['bintray.user']
+    key = properties['bintray.api_key']
+
+    publications = ['KotlinPublication']
+    publish = true
+
+    pkg {
+        repo = 'maven'
+        name = 'KeX-kotlin'
+        licenses = ['MIT']
+        vcsUrl = 'https://github.com/Keyrillanskiy/keX'
+        dryRun = false
+
+        version {
+            name = KeXVersion
+            desc = 'alpha'
+            released = new Date()
+            vcsTag = KeXVersion
+        }
+    }
 }
